--- a/src/Components/Name/Name.scss
+++ b/src/Components/Name/Name.scss
@@ -10,7 +10,8 @@
     text-align: center;
     justify-content: center;
     opacity: .8;
-    padding: 25px;
+    padding-top: 0px;
+    padding-bottom: 0px;
     border: 5px solid gray;
     background: white;
     position: relative;
