--- a/src/Components/Name/Name.scss
+++ b/src/Components/Name/Name.scss
@@ -1,21 +1,22 @@
 .container {
-    width: 100%;
+    width: 50%;
+    // height: 42em;
+    // position: relative;
 }
 
 .box {
-
-    width: 220px;
+    position: absolute;
+    top: 44%;
+    left: 20%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    // position: relative;
+    color: black;
     min-width: 100px;
     min-height: 43px;
-    text-align: center;
-    justify-content: center;
-    opacity: .8;
-    padding-top: 0px;
-    padding-bottom: 0px;
-    border: 5px solid gray;
-    background: white;
-    position: relative;
-    font-size: 40px;
+    // text-align: center;
+    background: transparent;
+    font-size: 75px;
     font-family: 'Times New Roman', Times, serif;
 }
 
