--- a/src/Components/Name/Name.scss
+++ b/src/Components/Name/Name.scss
@@ -1,28 +1,30 @@
 .container {
-    width: 50%;
-    // height: 42em;
-    // position: relative;
-}
+   
+    display: flex;
+    flex-flow: column;
 
-.box {
-    position: absolute;
-    top: 44%;
-    left: 20%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
-    // position: relative;
-    color: black;
-    min-width: 100px;
-    min-height: 43px;
-    // text-align: center;
-    background: transparent;
-    font-size: 75px;
-    font-family: 'Times New Roman', Times, serif;
-}
+    
 
-@media only screen and (max-width: 600px) {
     .box {
+        position: absolute;
+        top: 44%;
+        left: 20%;
+        margin-right: -50%;
+        transform: translate(-50%, -50%);
+        // position: relative;
+        color: black;
         min-width: 100px;
-        min-height: 50px;
+        min-height: 43px;
+        // text-align: center;
+        background: transparent;
+        font-size: 75px;
+        font-family: 'Times New Roman', Times, serif;
+
+        @media (max-width: 800px){
+            top: 102px;
+            left: 52%;
+        }
     }
-  }
+}
+
+
