--- a/src/Components/Construction/Construction.scss
+++ b/src/Components/Construction/Construction.scss
@@ -6,6 +6,11 @@
     background-size: cover;
     background-position: center;
     background-repeat: repeat;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+
 
     @media (max-width: 800px) {
       width: initial;
@@ -13,4 +18,21 @@
       flex-direction: column;
       align-items: center;
     }
+
+    .construction {
+      margin: 0;
+      font-size: 90px;
+      font-family: Times;
+
+      @media (max-width: 800px) {
+        margin: 0;
+        font-size: 50px;
+        font-family: 'Times New Roman', Times, serif;
+      }
+
+    }
+   
+
+  
 }
+  
