--- a/src/Components/Login/Login.scss
+++ b/src/Components/Login/Login.scss
@@ -1,86 +1,150 @@
-.main-container {
+.name-login-box {
+    position: absolute;
+    display: flex;
+    height: 21em;
+    width: 75em;
     right: 61px;
     top: 265px;
-    margin: 2px;
-    height: 21em;
-    display: flex;
-    position: absolute;
+    justify-content: space-evenly;
     align-items: center;
-    justify-content: center;
-    width: 45em;
-    background: white;
-    font-family: 'Times New Roman', Times, serif;
-    opacity: 0.8;
-    .login-box {
-        width: 17em;
-        height: 15em;
-        align-items: center;
-        justify-content: center;
-        right: 296px;
-        top: 107px;
-        // border: 2px solid black;
-        margin: 20px;
-        .login-title {
-            top: 20px;
-            font-size: 26px;
-        }
-        .login-container {
-            background: lightblue;
-            right: 382px;
-            top: 111px;
-            height: 12em;
-            // display: flex;
-            position: absolute;
-            align-items: center;
-            justify-content: center;
-            width: 17em;
+    flex-wrap: nowrap; 
 
-            .login-info{
-                position: absolute;
-                top: 69px;
-            }
+    @media (max-width: 800px) {
+        margin-top: 10px;
+        margin-bottom: 10px;
+        flex-flow: column;
+        height: 50em;
+        width: 19em;
+        position: inherit;
+        top: 0;
+        justify-content: space-between;
+        
+    }
+
+
+
+    .box {
+        // position: absolute;
+        top: 44%;
+        left: 20%;
+        margin-right: auto;
+        // transform: translate(-50%, -50%);
+        // position: relative;
+        color: black;
+        min-width: 100px;
+        min-height: 43px;
+        // text-align: center;
+        background: transparent;
+        font-size: 75px;
+        font-family: 'Times New Roman', Times, serif;
+
+        // @media (min-width: 800px) and (max-width: 1200px) {
+        //     flex-flow: column;
+        // }  
+        @media (max-width: 800px){
+            margin-right: 0;
+            word-break: break-all;
+            font-size: 36px; 
         }
     }
-    .signup-box {
-        width: 17em;
-        height: 15em;
+
+    .main-container {
+        right: 61px;
+        top: 265px;
+        height: 21em;
+        display: flex;
+        flex-wrap: wrap;
         align-items: center;
-        justify-content: center;
-        right: 23px;
-        top: 107px;
-        margin: 20px;
-        // border: 2px solid black;
-        .signup-title {
-            top: 20px;
-            font-size: 26px;
+        justify-content: space-evenly;
+        width: 45em;
+        background: white;
+        font-family: 'Times New Roman', Times, serif;
+        opacity: 0.8;
+        
+        @media (max-width: 800px){ 
+            width: 19em;
+            height: 40em;
+            // border-radius: 20%;
         }
-        .signup-container {
-            background: lightblue;
-            right: 66px;
-            top: 111px;
-            height: 12em;
-            opacity: 1 !important;
-            // display: flex;
-            position: absolute;
+    
+        .login-box {
+            width: 17em;
+            height: 15em;
             align-items: center;
             justify-content: center;
-            width: 17em;
+            right: 296px;
+            top: 107px;
+            // border: 2px solid black;
+            margin: 20px;
+            @media (max-width: 800px){ 
+                width: 21em;
+
+            }
             
-            .signup-info{
-                position: absolute;
-                top: 69px;
+            .login-title {
+                top: 20px;
+                font-size: 26px;
+            }
+            .login-container {
+                background: lightblue;
+                /* right: 382px; */
+                /* top: 111px; */
+                height: 12em;
+                /* position: absolute; */
+                align-items: center;
+                justify-content: center;
+                width: 17em;
+                margin-top: 10px;
+                @media (max-width: 800px){ 
+                    width: 18em;
+                    // border-radius: 20%;
+                }
+    
+                .login-info{
+                    position: absolute;
+                    top: 69px;
+                }
             }
         }
+        .signup-box {
+            width: 17em;
+            height: 15em;
+            align-items: center;
+            justify-content: center;
+            right: 23px;
+            top: 107px;
+            margin: 20px;
+            @media (max-width: 800px){ 
+                width: 21em;
+            }
+            // border: 2px solid black;
+            .signup-title {
+                top: 20px;
+                font-size: 26px;
+            }
+            .signup-container {
+                background: lightblue;
+                /* right: 66px; */
+                /* top: 111px; */
+                height: 12em;
+                opacity: 1 !important;
+                /* position: absolute; */
+                align-items: center;
+                justify-content: center;
+                /* width: 17em; */
+                margin-top: 10px;
+                @media (max-width: 800px){ 
+                    width: 18em;
+                    // border-radius: 20%;
+                }
+                
+                .signup-info{
+                    position: absolute;
+                    top: 69px;
+                }
+            }
+        }
+        
     }
-    
-    
 }
 
-    
-
-@media only screen and (max-width: 600px) {
-    .box {
-        min-width: 100px;
-        min-height: 50px;
-    }
-  }
