--- a/src/Components/NavBar/nav.scss
+++ b/src/Components/NavBar/nav.scss
@@ -16,8 +16,7 @@
 
     color: black;
   
-    font-family: 'IBM Plex Sans', 'Menlo', 'DejaVu Sans Mono', 'Bitstream Vera Sans Mono', Courier,
-      monospace;
+    font-family: 'Times New Roman', Times, serif;
     font-size: carbon--type-scale(6);
   
     box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2), 0px 4px 5px 0px rgba(0, 0, 0, 0.14),
@@ -57,7 +56,7 @@
       color: black;
 
       @media (max-width: 800px) {
-        visibility: hidden;
+        font-size: 14px;
       }
     }
   
