--- a/src/Components/Construction/Construction.scss
+++ b/src/Components/Construction/Construction.scss
@@ -9,7 +9,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
-
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: none;
 
 
     @media (max-width: 800px) {
@@ -22,12 +23,13 @@
     .construction {
       margin: 0;
       font-size: 90px;
-      font-family: Times;
+      height: 45%;
 
       @media (max-width: 800px) {
         margin: 0;
         font-size: 50px;
         font-family: 'Times New Roman', Times, serif;
+        
       }
 
     }
